# openenv-email-triage

./: .env.example  .gitignore  Dockerfile  README.md  app.py  base.py  baseline.py  email_env.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt  schema.py  smart_home.py  spaces.py  test_env.py  validate_submission.py  verify.py
server/: app.py
